--- a/yourcaryourwarback/src/main/resources/application.properties
+++ b/yourcaryourwarback/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/poc?allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
+oc.app.jwtSecret=openclassrooms
+oc.app.jwtExpirationMs=86400000
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
