web socket marche à mettre en forme et ajouter systeme de connexion et de chat selon utilisateur

--- a/yourcaryourwarback/src/main/resources/application.properties
+++ b/yourcaryourwarback/src/main/resources/application.properties
@@ -9,3 +9,4 @@ oc.app.jwtSecret=openclassrooms
 oc.app.jwtExpirationMs=86400000
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+server.port = 3000
